app-test/testdata/typesystem/neg/algebraic-type-duplicate-declaration/check/adt.check
Error in "testdata/typesystem/neg/algebraic-type-duplicate-declaration/src/adt.cal" on line 3:
    type T : (int a) end // error
    ^^^^^^^^^^^^^^^^^^^^
T is already declared in this scope.